[HOTFIX] fixing spacing, alignmment, etc

--- a/src/pages/Login/index.css
+++ b/src/pages/Login/index.css
@@ -2,7 +2,6 @@
   width: 500px;
   height: 400px;
   margin: auto;
-  background-color: white;
   padding: 32px;
   display: flex;
   flex-direction: column;
